crates/config-derive/tests/ui/union.stderr
error: unions are not supported with #[derive(Merge)]
  --> ./tests/ui/union.rs:23:10
   |
23 | #[derive(azalia_config_derive::Merge)]
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `azalia_config_derive::Merge` (in Nightly builds, run with -Z macro-backtrace for more info)
